# blog_os

./: Cargo.toml  README.md  boot.sh
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
