[package]
edition = "2021"
name = "blog_os"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.9.3"
uart_16550 = "0.2.18"
volatile = "0.2"
x86_64 = "0.14.9"

[[test]]
harness = false
name = "should_panic"

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[package.metadata.bootimage]
# The cargo subcommand that will be used for building the kernel.
#
# For building using the `cargo-xbuild` crate, set this to `xbuild`.
build-command = ["build"]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

# Additional arguments passed to the run command for non-test executables
# Applies to `bootimage run` and `bootimage runner`
# vnc port start from 5900, so 0.0.0.0:1 means 0.0.0.0:5901
run-args = ["-vnc", "0.0.0.0:1"]

# Additional arguments passed to the run command for test executables
# Applies to `bootimage runner`
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]

# An exit code that should be considered as success for test executables
test-success-exit-code = 33 # (0x10 << 1) | 1

# The timeout for running a test through `bootimage test` or `bootimage runner` (in seconds)
test-timeout = 10

# Whether the `-no-reboot` flag should be passed to test executables
test-no-reboot = true
